syntax = "proto3";

package coordinator;

option go_package = "github.com/jmsadair/keychainDB/proto/coordinator";

import "google/api/annotations.proto";
import "proto/chain/chain.proto";

// CoordinatorService is used to communicate with the coordinator cluster.
service CoordinatorService {
	// GetMembers handles requests to read the chain configuration.
	rpc GetMembers(GetMembersRequest) returns (GetMembersResponse) {
		option (google.api.http) = {
			get: "/v1/chain/members"
		};
	}
	// AddMember handles requests to add a member to the chain.
	rpc AddMember(AddMemberRequest) returns (AddMemberResponse) {
		option (google.api.http) = {
			post: "/v1/chain/members"
			body: "*"
		};
	}
	// RemoveMember handles requests to remove a member from the chain.
	rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse) {
		option (google.api.http) = {
			delete: "/v1/chain/members/{id}"
		};
	}
	// JoinCluster handles requests to join the coordinator cluster.
	rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse) {
		option (google.api.http) = {
			post: "/v1/cluster/members"
			body: "*"
		};
	}
	// RemoveFromCluster handles requests to remove a node from the coordinator cluster.
	rpc RemoveFromCluster(RemoveFromClusterRequest) returns (RemoveFromClusterResponse) {
		option (google.api.http) = {
			delete: "/v1/cluster/members/{id}"
		};
	}
	// ClusterStatus handles requests to get the coordinator cluster status.
	rpc ClusterStatus(ClusterStatusRequest) returns (ClusterStatusResponse) {
		option (google.api.http) = {
			get: "/v1/cluster/status"
		};
	}
}

// GetMembersRequest is a request to get the members of the chain configuration.
message GetMembersRequest {}

// GetMembersResponse is a response to a GetMembersRequest.
message GetMembersResponse {
	chain.Configuration configuration = 1;
}

// AddMemberRequest is a request to add a member to the chain.
message AddMemberRequest {
	string id = 1;
	string address = 2;
}

// AddMemberResponse is a response to an AddMemberRequest.
message AddMemberResponse {}

// RemoveMemberRequest is a request to remove a member from the chain.
message RemoveMemberRequest {
	string id = 1;
}

// RemoveMemberResponse is a response to a RemoveMemberRequest.
message RemoveMemberResponse {}

// JoinClusterRequest is a request to join the coordinator cluster.
message JoinClusterRequest {
	string id = 1;
	string address = 2;
}

// JoinClusterResponse is a response to a JoinClusterRequest.
message JoinClusterResponse {}

// RemoveFromClusterRequest is a request to remove a coordinator from the cluster.
message RemoveFromClusterRequest {
	string id = 1;
}

// RemoveFromClusterResponse is a response to a RemoveFromClusterRequest.
message RemoveFromClusterResponse {}

// ClusterStatusRequest is a request to get the coordinator cluster status.
message ClusterStatusRequest {}

// ClusterStatusResponse is a response to a ClusterStatusRequest.
message ClusterStatusResponse {
	map<string, string> members = 1;
	string leader = 2;
}

// An operation that adds a member to a chain.
message AddMemberOperation {
	string id = 1;
	string address = 2;
}

// An operation that removes a member from a chain.
message RemoveMemberOperation {
	string id = 1;
}

// An operation to read the current chain membership configuration.
message ReadMembershipOperation {}

// An operation that will be replicated across a raft cluster.
message ReplicatedOperation {
	oneof operation {
		AddMemberOperation add_member = 1;
		RemoveMemberOperation remove_member = 2;
		ReadMembershipOperation read_membership = 3;
	}
}
